<resources>
    <string name="app_name">Painter</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_second">SecondActivity</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_easy_level">EasyLevelActivity</string>

    <string name="title_activity_medium_level">MediumLevelActivity</string>

    <string name="title_activity_hard_level">HardLevelActivity</string>

    <string name="title_activity_result">ResultActivity</string>

    <string name="red">red</string>
    <string name="black">black</string>
    <string name="orange">orange</string>
    <string name="blue">blue</string>
    <string name="violet">violet</string>
    <string name="grey">grey</string>
    <string name="cyan">cyan</string>
    <string name="brown">brown</string>
    <string name="yellow">yellow</string>
    <string name="pink">pink</string>
    <string name="textview">TextView</string>

</resources>
