<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_levels_background"
    tools:context=".HardLevelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <Button
            android:id="@+id/sampleSeventh"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="11dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/blue"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleEighth"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="203dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/yellow"
            android:textAllCaps="false"
            android:textColor="@color/colorBlue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleNinth"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="400dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/orange"
            android:textAllCaps="false"
            android:textColor="@color/colorYellow"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timer3"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="255dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="top|center"
            android:text="Time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points3"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="-7dp"
            android:ems="10"
            android:fontFamily="@font/architects_daughter"
            android:inputType="number"
            android:text="   .pkt"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainSample3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="195dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center"
            android:text="@string/red"
            android:textColor="@color/colorRed"
            android:textSize="60sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="top|right"
            android:layout_margin="15dp"
            android:layout_marginEnd="19dp"
            android:onClick="backButton2"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <Button
            android:id="@+id/sampleThird3"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="400dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/grey"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleSixth2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="401dp"
            android:layout_marginBottom="68dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/brown"
            android:textAllCaps="false"
            android:textColor="@color/colorPink"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFifth2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="206dp"
            android:layout_marginBottom="67dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/pink"
            android:textAllCaps="false"
            android:textColor="@color/colorViolet"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleSecond3"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="205dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/red"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFirst3"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="125dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/green"
            android:textAllCaps="false"
            android:textColor="@color/colorRed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFourth2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="67dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/violet"
            android:textAllCaps="false"
            android:textColor="@color/colorBrown"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
            android:orientation="horizontal">

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>