<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_levels_background"
    tools:context=".MediumLevelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="37dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="top|right"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="backButton2"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <TextView
            android:id="@+id/timer2"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="255dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="top|center"
            android:text="Time"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/points2"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/back_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="-7dp"
            android:ems="10"
            android:fontFamily="@font/architects_daughter"
            android:inputType="number"
            android:text="   .pkt"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mainSample2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="197dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/architects_daughter"
            android:gravity="center"
            android:text="@string/red"
            android:textColor="@color/colorRed"
            android:textSize="60sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleSixth"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="402dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/brown"
            android:textAllCaps="false"
            android:textColor="@color/colorPink"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFifth"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="204dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/pink"
            android:textAllCaps="false"
            android:textColor="@color/colorViolet"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFourth"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="11dp"
            android:layout_marginBottom="41dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/violet"
            android:textAllCaps="false"
            android:textColor="@color/colorBrown"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleThird2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="400dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/grey"
            android:textAllCaps="false"
            android:textColor="@color/colorGreen"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleSecond2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="205dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/red"
            android:textAllCaps="false"
            android:textColor="@color/colorGrey"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sampleFirst2"
            android:layout_width="180dp"
            android:layout_height="52dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/ic_sample1_obszar_roboczy_1"
            android:fontFamily="@font/architects_daughter"
            android:text="@string/green"
            android:textAllCaps="false"
            android:textColor="@color/colorRed"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_overlay"
            android:orientation="horizontal">

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>